# Go-Verus2Hash

./: .gitignore  README.md  go.mod  verushash.go
verushash/: CMakeLists.txt  KeccakDuplex.c  KeccakHash.c  KeccakHash.h  KeccakSponge.c  VH.go  bcd.c  bcd.h  blake256.c  blake256.h  cryptonight.c  cryptonight.h  cubehash.c  generate.sh  haraka.c  haraka_portable.h  hsr.c  hsr.h  keccak.c  lbry.c  lbry.h  lyra2.c  lyra2.h  lyra2Z.c  lyra2Z.h  lyra2rev2.c  lyra2rev2.h  main.c  maxcoin.c  maxcoin.h  md_helper.c  miner.h  phi.c  phi.h  skein2.c  skein_block.c  skunk.c  sm3.c  sph_types.h  sponge.c  (+7 more)
